--- a/assignments/assignment-2.qmd
+++ b/assignments/assignment-2.qmd
@@ -3,15 +3,47 @@ title: "DV Assignment 2 (Final Project)"
 format: html
 ---
 
-For the final assignment, you will be making a data visualization which aims to answer your chosen research question.
+For the second and final assignment of the Data Visualization module, the challenge is to transform raw data into a clear and compelling story. Your goal is to design a visualization using the Oefenweb data that highlights meaningful patterns and provides actionable insights. To aid in this, each research question (substantiated below) is accompanied by a code chunk which gives you the relevant data. You are expected to do some data preparation and/or filtering of this data to obtain clean, reliable results. However, you are not expected to query data from other sources in the database, or perform complicated data manipulations to derive a variable -- focus on using the data given to create a sound data visualization. 
 
-**research questions:**
+### The report
+You will write the assignment in R Markdown (or Quarto), to produce a report-style document of no more than 1000 words. The final version should be compiled into `.html` format. 
 
-general points:
+The report should be a description of the process that led to your final data visualization. You should include:  
 
+-  An explanation of your research question and the target audience for your visualization. What did you want to communicate?  
+
+-  A description of your exploratory process, including at least one exploratory graph. This can be the graph that you created in assignment 1, or an updated one. While this graph is intended to illustrate your thought process, its aesthetic- and communicative quality will not be graded. However, we will grade the quality of the report as a whole, which includes communication about how the exploratory graph helped you to understand the data, and influenced your choices for the final, explanatory, data visualization.  
+
+-  Your final, explanatory, data visualization. Clearly mark which one of your visualizations this is. Include the visualization, along with an explanation of what it aims to communicate. Importantly, what can you conclude from this visualization? Why is this the best way to communicate this conclusion? This should follow logically from the introduction of your report (research question & exploration). 
+
+### Levels of visualization
+Your chosen research question falls into one of three levels: analytics, infernece, or prediction. Each level has different expectations in terms of how the visualization should be constructed and what role statistical modeling plays. 
+
+#### Analytics
+Analytics is about describing and comparing what is happening in the data, often in a way that is directly actionable for a practitioner. At this level, we expect you to create clear, actionable visualizations that are easy to interpret for a practitioner (e.g. a teacher). This should rely less on statistical modeling and more on effective communication of patterns in the data. You do, however, need to make sure that the patterns communicated are reliable. 
+
+#### Inference
+Inference goes one step further: it aims to explain differences or relationships in the data, often by comparing groups or testing hypotheses. We expect a visualization at this level to be supplemented with statistical tests or models (e.g. significance tests). The visualization should not only show patterns but also provide evidence for why the observed differences matter. 
+
+#### Prediction 
+Prediction focuses on using current information to forecast outcomes. At this level, you should fit and interpret a predictive model (e.g., a linear or logistic regression). The visualization should clearly communicate how well the model performs, what predictors matter, and what can be learned from the model's outcomes. 
+
+### Workflow
+There are several guidelines on workflow which you should follow when collaborating on this project: 
+
+-  Comment your code clearly. This not only helps us to understand your process, but your group members to collaborate efficiently. 
+
+-  Use Git. Set up the project following the instructions in Assignment 1. 
+
+-  Do not push data to GitHub! 
+
+### First draft and peer review
+
+
+### Tips 
+make sure to render the plot large enough so it is readable in the html. 
 -   adding interactivity?
 -   consider whether to plot one or a couple students, or plot general effects.
--   add general instructions for analytics / inference / prediction
 -   in your plot, highlight your main conclusion (and if necessary - substantiate with a model)
 -   make sure plot is explanatory
 
